cloud/sg.tf
#########
# Security group configuration

resource "aws_security_group" "spring4shell_demo" {

  description = "${var.solution_name}-sg-${random_string.suffix.result}"
  name_prefix = "spring4shell_demo"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "ssh access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"

    cidr_blocks = [
      "${data.external.myipaddr.result.ip}/32", # Allow only own IP access
    ]
  }

  ingress {
    description = "web access"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"

    cidr_blocks = [
      "${data.external.myipaddr.result.ip}/32", # Allow only own IP access
    ]
  }

  egress {
    description = "Allow outbound access"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    yor_trace = "1603769c-20dd-4bb0-986b-d0b63875aba0"
  }
}
